force-app/main/default/objects/Company_System_Phone_Numbers__c/Company_System_Phone_Numbers__c.object-meta.xml
<CustomObject>
    <description>Voice Project - System Phone Numbers:
- Phone Number
- Phone Type
- Toll Free
- Number Category
- Status</description>
    <label>Associated Company Phone Numbers</label>
    <nameField>
        <displayFormat>CSPN-{00000000}</displayFormat>
        <label>CSPN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Company Phone Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>