force-app/main/default/objects/Company_System_Phone_Numbers__c/fields/Number_Category__c.field-meta.xml
<CustomField>
    <fullName>Number_Category__c</fullName>
    <description>Voice - CSPN - Number Category</description>
    <inlineHelpText>Voice - CSPN - Number Category</inlineHelpText>
    <label>Number Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>