force-app/main/default/objects/Company_System_Phone_Numbers__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Voice - CSPN Phone Number</description>
    <inlineHelpText>Voice - CSPN Phone Number</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>