force-app/main/default/objects/Company_System_Phone_Numbers__c/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <description>Voice - CSPN - Phone Type</description>
    <inlineHelpText>Voice - CSPN - Phone Type</inlineHelpText>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shared All</fullName>
            </value>
            <value>
                <fullName>VM Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>