force-app/main/default/objects/Company_System_Phone_Numbers__c/fields/PhoneNumber2__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber2__c</fullName>
    <description>Voice-WCSA - For Matching Duplicates</description>
    <externalId>true</externalId>
    <inlineHelpText>Voice-WCSA - For Matching Duplicates</inlineHelpText>
    <label>PhoneNumber2</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>