force-app/main/default/objects/Company_System_Phone_Numbers__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Voice - CSPN - Status</description>
    <inlineHelpText>Voice - CSPN - Status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Bureau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>