force-app/main/default/objects/Company_System_Phone_Numbers__c/fields/Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Voice - CSPN - Toll Free</description>
    <inlineHelpText>Voice - CSPN - Toll Free</inlineHelpText>
    <label>Toll Free</label>
    <type>Checkbox</type>
</CustomField>