force-app/main/default/objects/Company_System_Phone_Numbers__c/fields/Voice_Account__c.field-meta.xml
<CustomField>
    <fullName>Voice_Account__c</fullName>
    <description>Voice - CSPN - Account Master</description>
    <inlineHelpText>Voice - CSPN - Account Master</inlineHelpText>
    <label>Voice Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Company_System_Phone_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>